--- a/app/src/main/res/layout/activity_detailitem.xml
+++ b/app/src/main/res/layout/activity_detailitem.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="25dp"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/DetailItemGambar"
@@ -72,6 +73,17 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="#DaftarTempat"/>
+
+        <Button
+            android:id="@+id/btnDetailItemBecomeSeller"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Saya jual item ini"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"/>
     </LinearLayout>
     
 </ScrollView>
