--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -38,7 +38,7 @@
             android:id="@+id/txtSignupTglLahir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="DD-MM-YYYY"
+            android:hint="DD/MM/YYYY"
             android:focusable="false"
             android:text="" />
 
