--- a/app/src/main/res/menu/menu_listitem.xml
+++ b/app/src/main/res/menu/menu_listitem.xml
@@ -9,6 +9,12 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/menu_listitem_sort"
+        android:icon="@drawable/ic_sort_white_24dp"
+        android:title="Sort by ..."
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/menu_listitem_search"
         android:icon="@drawable/ic_search_white_24dp"
         android:title="Pencarian"
