--- a/app/src/main/res/layout/activity_searchitem.xml
+++ b/app/src/main/res/layout/activity_searchitem.xml
@@ -7,38 +7,59 @@
     android:orientation="vertical"
     tools:context="com.develop.filhan.eencyclopediaone.SearchItem">
 
-    <LinearLayout
+    <SearchView
+        android:id="@+id/txtSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:orientation="vertical">
-        <EditText
-            android:id="@+id/txtCari"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="e.g Soto Medan"
-            android:inputType="textPersonName"
-            />
-        <Button
-            android:id="@+id/btnCari"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cari"/>
-    </LinearLayout>
+        android:iconifiedByDefault="false"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/button_secondary_outline"
+        android:queryHint="e.g. Soto">
+        <requestFocus />
+    </SearchView>
 
-    <TextView
-        android:id="@+id/lblStatusCari"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textAlignment="center"
-        android:padding="5dp"/>
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:padding="20dp"-->
+        <!--android:orientation="vertical">-->
+        <!--<EditText-->
+            <!--android:id="@+id/txtCari"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="e.g Soto Medan"-->
+            <!--android:inputType="textPersonName"-->
+            <!--/>-->
+        <!--<Button-->
+            <!--android:id="@+id/btnCari"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Cari"/>-->
+    <!--</LinearLayout>-->
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/listCari"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="0.9">
+    </android.support.v7.widget.RecyclerView>
 
-    </ListView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.06"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="16dp">
+        <TextView
+            android:id="@+id/lblStatusCari"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Ditemukan 1"/>
+    </LinearLayout>
 
 </LinearLayout>
