--- a/app/src/main/res/layout/content_signin.xml
+++ b/app/src/main/res/layout/content_signin.xml
@@ -20,6 +20,7 @@
         android:id="@+id/txtSigninEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
         android:hint="" />
 
     <Space
