--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/lblAuthNama"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Mercu Buana"
+                    android:text="........"
                     android:textSize="22sp" />
 
                 <Space
@@ -57,7 +57,7 @@
                     android:id="@+id/lblAuthTTL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="21 Agustus 1997"
+                    android:text="........"
                     android:textSize="22sp" />
 
                 <Space
@@ -75,7 +75,7 @@
                     android:id="@+id/lblAuthProvinsi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Jawa Barat"
+                    android:text="........"
                     android:textSize="22sp" />
 
                 <View
@@ -99,7 +99,7 @@
                     android:id="@+id/lblAuthDN"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="alpenliebe"
+                    android:text="........"
                     android:textSize="16sp" />
 
                 <TextView
@@ -113,7 +113,7 @@
                     android:id="@+id/lblAuthEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="alpenliebe@eclairs.id"
+                    android:text="........"
                     android:textSize="16sp" />
 
                 <TextView
@@ -127,7 +127,7 @@
                     android:id="@+id/lblAuthRole"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Watcher"/>
+                    android:text="........"/>
             </LinearLayout>
 
             <LinearLayout
