--- a/app/src/main/res/layout/activity_detailitem.xml
+++ b/app/src/main/res/layout/activity_detailitem.xml
@@ -192,6 +192,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginBottom="16dp"
             android:padding="2dp">
 
             <TextView
@@ -215,7 +216,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
                 android:padding="10dp"
-                android:text="Deskripsi" />
+                android:visibility="gone"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:orientation="vertical">
+                <com.google.android.gms.maps.MapView
+                    android:id="@+id/DetailItemMap"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -272,7 +282,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/btnDetailItemBecomeSeller"
+            android:id="@+id/btnDetailSellerAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
