--- a/app/src/main/res/layout/content_comment.xml
+++ b/app/src/main/res/layout/content_comment.xml
@@ -27,6 +27,13 @@
             android:src="@drawable/ic_mail_send" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/DetailItemInfoComment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Item Belum Ada"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listDetailComment"
         android:layout_width="match_parent"
